style: fix some broken inputs texts border style. #110
angular is removing the type=text attribute and breaking the css selector.

--- a/src/modules/ui/assets/style.less
+++ b/src/modules/ui/assets/style.less
@@ -96,3 +96,8 @@
         }
     }
 }
+
+input:not([type]) {
+    border: none;
+    outline: none;
+}
